# mlperf-log-parser

./: .gitignore  Cargo.toml  README.md  build.rs  install.sh
.github/workflows/: release.yml
src/: lib.rs  log_detail.rs  main.rs  summary.rs
src/log_summary/: grammar.lalrpop  lexer.rs  mod.rs  model.rs
tests/: lib_test.rs  lib_test_log_summary.rs
tests/data/: mlperf_log_detail.txt  mlperf_log_summary.txt
