[package]
name = "mlperf-log-parser"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde-value = "0.7.0"
serde_json = "1.0"
serde_yaml = "0.9.34"
structopt = "0.3.26"

[lib]
name = "mlperf_log_parser"
path = "src/lib.rs"

[[bin]]
name = "mlperf-log-parser"
path = "src/main.rs"
